# cosmeticool

./: .gitignore  .pre-commit-config.yaml  README.md  cosmetic_sales.csv  pyproject.toml
.github/workflows/: main.yaml
cosmeticool/: cli.py  metrics.py  outputs.py  reports.py  sources.py
tests/: test_metrics.py  test_reports.py
